testDivide() works now